feat: ajusta testes e retorno de endpoint albums/average
