# domain/dtos/album/get_average_albums_price_response.go
@@ -1,0 +1,5 @@
+package dtos
+
+type GetAverageAlbunsPriceResponseDto struct {
+	AveragePrice *float64 `json:"averagePrice" example:"57.90"`
+}
